--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,26 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+.mainButton {
+  border: 0.5vh solid white;
+  padding: 2vh 10vh;
+}
+
+.moveButton {
+  border: 0.5vh solid white;
+  text-align: center;
+  aspect-ratio: 1/1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 0.5s all;
+}
+
+.moveButton:hover {
+  background-color: gray;
 }
