--- a/app/globals.css
+++ b/app/globals.css
@@ -23,22 +23,44 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
-.mainButton {
-  border: 0.5vh solid white;
-  width: max-content;
-  padding: 2vh 5vh;
+* {
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .moveButton {
-  border: 0.5vh solid white;
-  text-align: center;
-  aspect-ratio: 1/1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: 0.5s all;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 .moveButton:hover {
-  background-color: gray;
+  background-color: #2f2f2f;
+}
+
+.mBleft:hover {
+  background: linear-gradient(90deg, #2f2f2f 0%, rgba(0, 0, 0, 1) 100%);
+}
+
+.mBright:hover {
+  background: linear-gradient(270deg, rgb(47, 47, 47) 0%, rgba(0, 0, 0, 1) 100%);
+}
+
+.mBup:hover {
+  background: linear-gradient(180deg, rgb(47, 47, 47) 0%, rgba(0, 0, 0, 1) 100%);
+}
+
+.mBdown:hover {
+  background: linear-gradient(0deg, rgb(47, 47, 47) 0%, rgba(0, 0, 0, 1) 100%);
+}
+
+table {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
 }
